gcc/testsuite/rust/rustc/ui/suggestions/dont-suggest-ufcs-for-const.rs
fn main() {
    1_u32.MAX();
// { dg-error ".E0599." "" { target *-*-* } .-1 }
}

